<resources>
    <string name="build_version">build 0211</string>
    <string name="app_name">M6分享厨房</string>
    <string name="menu_settings">Settings</string>
    <string name="positive">确定</string>
    <string name="cancel">取消</string>
    <string name="biz_main_tab_search">热门菜谱</string>
    <string name="biz_main_tab_hot">最近流行</string>
    <string name="biz_main_tab_shopping">购买清单</string>
    <string name="biz_main_tab_account">我</string>
    <string name="biz_main_exit_title">退出提示</string>
    <string name="biz_main_exit_message">您确定要退出么？</string>
    <string name="biz_recipe_exit_message">退出后将丢失所有编辑的菜谱数据，确定退出？</string>
    <string name="biz_buy_exit_message">您有未下单的商品，确定退出？</string>
    <string name="biz_main_newversion_title">发现新版本</string>
    <string name="biz_main_newversion_positive">立刻升级</string>
    <string name="biz_main_newversion_negative">下次再说</string>
    <string name="base_loading_more">载入中&#8230;</string>
    <string name="base_empty_text">数据加载失败，请重试</string>
    <string name="base_network_error_tip">请检查网络连接状况</string>
    <string name="base_progress_message">&#160;&#160;正在加载&#8230;</string>
    <string name="biz_search_box_hint">搜索菜谱</string>
    <string name="biz_search_error_tip">点击获取菜谱</string>
    <string name="biz_search_clean">清除历史记录</string>
    <string name="biz_search_empty_message">没有找到与\"%s\"相关的菜谱</string>
    <string name="biz_search_empty_tip">搜索关键词不能为空</string>
    <string name="biz_account_tab_login">登录</string>
    <string name="biz_account_tab_register">注册M6分享厨房</string>
    <string name="biz_account_login">登  录</string>
    <string name="biz_account_register">注  册</string>
    <string name="biz_account_login_success">登录成功！</string>
    <string name="biz_account_register_success">注册成功！</string>
    <string name="biz_account_avatar_camera">通过拍照上传</string>
    <string name="biz_account_avatar_photo">从本地图库选择</string>
    <string name="biz_account_login_failure">登录失败，请重试</string>
    <string name="biz_account_login_progress">正在登录，请稍候...</string>
    <string name="biz_account_register_errorcode_phone_repeat">电话号码重复</string>
    <string name="biz_account_register_errorcode_nickname_repeat">昵称重复</string>
    <string name="biz_account_register_errorcode_account_exists">账号已存在</string>
    <string name="biz_account_register_errorcode_failure">注册失败</string>
    <string name="biz_account_logout_dialog_title">退出提示</string>
    <string name="biz_account_logout_dialog_message">您确定要退出该账号么？</string>
    <string name="bhiz_account_loginorregister_slogan">分享新鲜   分享美味   分享幸福</string>
    <string name="biz_profile_edit_btn">编辑</string>
    <string name="biz_profile_more_btn">查看全部%s个菜谱</string>
    <string name="biz_profile_myrecipe_title">%s的菜谱</string>
    <string name="biz_profile_introduction">个人简介\n %s</string>
    <string name="biz_profile_introduction_title">%s的介绍</string>
    <string name="biz_profile_myrecipes_title">%s的菜谱</string>
    <string name="biz_profile_myrecipes_header_title">创建新菜谱</string>
    <string name="biz_profile_mycollection_title">%s的收藏</string>
    <string name="biz_profile_info_failed">未能获取个人信息~</string>
    <string name="biz_profile_edit_save">保存</string>
    <string name="biz_profile_edit_title">编辑个人资料</string>
    <string name="biz_profile_edit_hint_name">昵称</string>
    <string name="biz_profile_edit_hint_birth">年龄</string>
    <string name="biz_profile_edit_hint_profession">职业</string>
    <string name="biz_profile_edit_hint_sex">性别</string>
    <string name="biz_profile_edit_hint_city">居住城市</string>
    <string name="biz_profile_edit_hint_intro">个人简介</string>
    <string name="biz_profile_edit_fail_tip">更新信息失败，请重试</string>
    <string name="biz_profile_edit_sex_male">男</string>
    <string name="biz_profile_edit_sex_female">女</string>
    <string name="biz_profile_edit_sex_unknown">保密</string>
    <string name="biz_profile_edit_empty">没有更改任何信息</string>
    <string name="biz_profile_edit_name_empty">昵称不能为空</string>
    <string name="biz_profile_edit_name_least_2">昵称最少两个字符</string>
    <string name="biz_profile_edit_birth_too_large">您的岁数太大啦~</string>
    <string name="biz_profile_edit_birth_error">年龄填写错误</string>
    <string name="biz_profile_add_follow">关注</string>
    <string name="biz_profile_add_unfollow">取消关注</string>
    <string name="biz_profile_add_follow_fail">关注失败，请重试</string>
    <string name="biz_profile_unfollow_fail">取消关注失败，请重试</string>
    <string name="biz_profile_update_avatar_success">头像更新成功！</string>
    <string name="biz_profile_upload_avatar">上传头像</string>
    <string name="biz_profile_uploading">正在上传...</string>
    <string name="biz_profile_updating">个人信息更新中...</string>
    <string name="biz_profile_avatar_tip">点击头像拍照或选择照片</string>
    <string name="biz_profile_myaccount_coupon">摇一摇·我的优惠券</string>
    <string name="biz_profile_myaccount_follow">我的关注</string>
    <string name="biz_profile_myaccount_fans">我的粉丝</string>
    <string name="biz_profile_myaccount_collection">我的收藏</string>
    <string name="biz_profile_myaccount_recipe">我的菜谱</string>
    <string name="biz_profile_myaccount_order">我的购买</string>
    <string name="biz_profile_myaccount_logout">登出</string>
    <string name="biz_profile_myaccount_fans_count">%d粉丝</string>
    <string name="biz_profile_myaccount_follows_count">%d关注</string>
    <string name="biz_profile_myaccount_credit_count">%d积分</string>
    <string name="biz_profile_myaccount_fans_title">%s的粉丝</string>
    <string name="biz_profile_myaccount_follows_title">%s关注的人</string>
    <string name="biz_profile_fans_empty_message">您还没有粉丝哦~</string>
    <string name="biz_profile_follows_empty_message">暂时还没有关注的人哦~</string>
    <string name="biz_profile_mycollection_empty_message">您目前没有收藏的菜谱，快去看看吧！</string>
    <string name="biz_profile_myrecipe_empty_message">您没有创建过菜谱，动手去做！</string>
    <string name="biz_recipe_share_title">分享到</string>
    <string name="biz_recipe_share_like">我喜欢这个菜</string>
    <string name="biz_recipe_share_come">（分享自 @M6分享厨房）</string>
    <string name="biz_recipe_about">%d人收藏</string>
    <string name="biz_recipe_material">用料</string>
    <string name="biz_recipe_addto_shoppinglist">加入购买清单</string>
    <string name="biz_recipe_goto_shoppinglist">购物清单</string>
    <string name="biz_recipe_procedure">做法</string>
    <string name="biz_recipe_tips">小贴士</string>
    <string name="biz_recipe_comment_num">%s条评论</string>
    <string name="biz_recipe_comment_num_no">还没有评论,点击进行评论</string>
	<string name="biz_recipe_finished_dish">大家参照这个菜谱做的%s</string>
    <string name="biz_recipe_related">喜欢这个菜谱的也喜欢</string>
    <string name="biz_recipe_image_banner_content_description">样图</string>
    <string name="biz_recipe_tabbar_menu_addcollecting">加入收藏</string>
    <string name="biz_recipe_tabbar_menu_removecollecting">移出收藏</string>
    <string name="biz_recipe_tabbar_menu_praise">%d人赞</string>
    <string name="biz_recipe_tabbar_menu_upload">上传你做的这道菜</string>
    <string name="biz_recipe_tabbar_menu_addshoppinglist">加入购买清单</string>
    <string name="biz_recipe_tabbar_menu_removeshoppinglist">移出购买清单</string>
    <string name="biz_recipe_tabbar_menu_addcollectfailed">添加收藏失败</string>
    <string name="biz_recipe_tabbar_menu_removecollectfailed">移出收藏失败</string>
    <string name="biz_recipe_tabbar_menu_progress">请耐心一点呦~</string>
    <string name="biz_recipe_edit_title_new">添加菜谱</string>
    <string name="biz_recipe_edit_title_edit">编辑菜谱</string>
    <string name="biz_recipe_edit_title_edit_post">发布修改</string>
    <string name="biz_recipe_edit_post">发布菜谱</string>
    <string name="biz_recipe_edit_required">（必填）</string>
    <string name="biz_recipe_edit_cover">菜谱封面</string>
    <string name="biz_recipe_edit_title">菜谱标题</string>
    <string name="biz_recipe_edit_introduction">菜谱介绍</string>
    <string name="biz_recipe_edit_material_tip">左：食材名（必填）   右：用量</string>
    <string name="biz_recipe_edit_material_addmore">再加一行</string>
    <string name="biz_recipe_edit_procedure_tip">左：步骤说明（必填）   右：步骤示意图</string>
    <string name="biz_recipe_edit_procedure_addmore">再加一项</string>
    <string name="biz_recipe_edit_tip_tip">做好这道菜的小诀窍</string>
    <string name="biz_recipe_edit_upload_photo">上传</string>
    <string name="biz_recipe_edit_remove_photo">移除</string>
    <string name="biz_recipe_edit_actionbar_opt">操作</string>
    <string name="biz_recipe_edit_actionbar_edit">编辑这个菜谱</string>
    <string name="biz_recipe_edit_actionbar_delete">删除这个菜谱</string>
    <string name="biz_recipe_edit_progressbar">上传中...</string>
    <string name="biz_recipe_edit_upload_ok">上传成功</string>
    <string name="biz_recipe_edit_upload_failed">上传失败</string>
    <string name="biz_recipe_edit_nocover">请添加封面</string>
    <string name="biz_recipe_edit_notitle">请添加菜谱名字</string>
    <string name="biz_recipe_edit_titleshort">菜谱名至少3个字</string>
    <string name="biz_recipe_edit_titleerror">菜谱至少两个字并且只能包含数字、字母、汉字和下划线</string>
    <string name="biz_recipe_edit_titlelong">菜谱名字太长</string>
    <string name="biz_recipe_edit_nomaterial">请添加用料</string>
    <string name="biz_recipe_edit_noprocedure">请添加步骤</string>
    <string name="biz_recipe_edit_descshort">菜谱介绍至少5个字</string>
    <string name="biz_recipe_edit_tipsshort">小贴士内容太少</string>
    <string name="biz_recipe_edit_posting">正在发布...</string>
    <string name="biz_recipe_edit_post_ok">发布成功</string>
    <string name="biz_recipe_edit_post_failed">发布失败</string>
    <string name="biz_recipe_edit_edit_ok">更新成功</string>
    <string name="biz_recipe_edit_edit_failed">更新失败</string>
    <string name="biz_recipe_edit_delete_ok">删除成功</string>
    <string name="biz_recipe_edit_delete_failed">删除失败</string>
    <string name="biz_recipe_edit_deleteing">正在删除...</string>
    <string name="biz_recipe_edit_title_isdelete">确认删除该菜谱?</string>
    <string name="biz_recipe_edit_title_deleteok">删除</string>
    <string name="biz_recipe_edit_title_deleteno">取消</string>
    <string name="biz_recipe_collect_count">%d赞</string>
    <string name="biz_recipe_comment_input_hint">添加评论</string>
    <string name="biz_recipe_comment_button_commit">提交</string>
    <string name="biz_recipe_comment_addfailed">评论失败</string>
    <string name="biz_recipe_comment_input_null">请输入评论内容</string>
    <string name="biz_recipe_comment_input_less">输入内容太少了哦</string>
    <string name="biz_recipe_purchase_material">做%s道菜所需的材料</string>
    <string name="biz_recipe_purchase_norecord_tip_more">将菜谱添加到购买清单，记录要买的食材</string>
    <string name="biz_recipe_purchase_clear_tip_title">清除提示</string>
    <string name="biz_recipe_purchase_clear_tip_content">你确定要清除购买清单吗？</string>
    <string name="biz_recipe_purchase_clear_positivebutton">确定</string>
    <string name="biz_recipe_purchase_clear_nagetivebutton">取消</string>
    <string name="biz_recipe_purchase_delete_btn">删除</string>
    <string name="biz_recipe_purchase_buy_btn">购买</string>
    <string name="biz_buy_title">选购商品</string>
    <string name="biz_buy_list_actionbar_right">下单</string>
    <string name="biz_buy_list_progress_message">正在下单，请稍后...</string>
    <string name="biz_buy_list_order_failure">订购失败</string>
    <string name="biz_buy_list_order_success">订购成功！</string>
    <string name="biz_buy_list_adapter_status">尚未选购商品</string>
    <string name="biz_buy_list_adapter_gotoshop">从m6鲜品在线选购食材</string>
    <string name="biz_buy_list_adapter_target">目标食材:%s</string>
    <string name="biz_buy_list_no_order">您还没有选购商品，请前往m6鲜品在线去选购~</string>
    <string name="biz_buy_search_fragment_title">搜索：%s</string>
    <string name="biz_buy_search_adapter_norm">规格：%s</string>
    <string name="biz_buy_search_adapter_unit">单位：%s</string>
    <string name="biz_buy_search_adapter_price">价格：%s元</string>
    <string name="biz_buy_search_adapter_method">加工方式：%s</string>
    <string name="biz_buy_search_adapter_intro">商品介绍：\n%s</string>
    <string name="biz_buy_search_fragment_empty">没有找到食材</string>
    <string name="biz_buy_search_fragment_500g">市斤(500g)</string>
    <string name="biz_popular_tophot">最热菜谱</string>
    <string name="biz_popular_topnew">最新菜谱</string>
</resources>