<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.m6.gocook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E9E5"
    android:orientation="vertical" >

    <!-- ActionBar -->

    <include
        android:id="@+id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/base_actionbar" />

    <!-- Tabbar -->

    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tabbar_textview_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/recipe_tabbar_like"
            android:gravity="center"
            android:text="@string/biz_recipe_tabbar_menu_addcollecting"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tabbar_textview_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/recipe_tabbar_camera"
            android:gravity="center"
            android:text="@string/biz_recipe_tabbar_menu_upload"
            android:textColor="#999999"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tabbar_textview_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/recipe_tabbar_buy"
            android:gravity="center"
            android:text="@string/biz_recipe_tabbar_menu_addshoppinglist"
            android:textColor="#999999"
            android:textSize="10sp" />
    </LinearLayout>

    <!-- Middle Content -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_above="@id/tabbar"
        android:layout_below="@id/actionBar"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Baner Image -->

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/biz_recipe_image_banner_height"
                android:contentDescription="@string/biz_recipe_image_banner_content_description" />

            <!-- Recipe Introduction -->


            <!-- Recipe Material -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/biz_recipe_material"
                android:textColor="#999999"
                android:textSize="14sp" />

            <com.m6.gocook.base.view.ExpandedGridView
                android:id="@+id/material_gridview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:layout_disbleScroll="true"
                android:horizontalSpacing="1dp"
                android:verticalSpacing="1dp"
                android:numColumns="2" />

            <!-- Recipe Produce -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/biz_recipe_procedure"
                android:textColor="#999999"
                android:textSize="14sp" />
            
            <com.m6.gocook.base.view.ExpandedListView
                android:id="@+id/procedure_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:verticalSpacing="1dp"
                app:layout_disbleScroll="true" />

            <!-- Comments -->
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                
            </LinearLayout>
            
            <!-- Related Recipe -->

            

        </LinearLayout>
    </ScrollView>

</RelativeLayout>